{
  "sourceLanguage" : "ja",
  "strings" : {
    "" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : ""
          }
        }
      }
    },
    "// TODO: DeviceInfo" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "// TODO: DeviceInfo"
          }
        }
      }
    },
    "// TODO: LicenseDetail" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "// TODO: LicenseDetail"
          }
        }
      }
    },
    "// TODO: Onboarding" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "// TODO: Onboarding"
          }
        }
      }
    },
    "// TODO: TaskList" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "// TODO: TaskList"
          }
        }
      }
    },
    "%@" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : ""
          }
        }
      }
    },
    "Empty" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Empty"
          }
        }
      }
    },
    "OK" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
        }
      }
    },
    "Original" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Original"
          }
        }
      }
    },
    "Random" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Random"
          }
        }
      }
    },
    "Remote Comfig 新 UI モード: %@" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Remote Comfig New UI Mode: %@"
          }
        }
      }
    },
    "Test Case" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Test Case"
          }
        }
      }
    },
    "UserDefaults の初期化" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Clear UserDefaults"
          }
        }
      }
    },
    "View Catalog" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "View Catalog"
          }
        }
      }
    },
    "View List" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "View List"
          }
        }
      }
    },
    "アイコン一覧" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Icon List"
          }
        }
      }
    },
    "オフ" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ON"
          }
        }
      }
    },
    "オン" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OFF"
          }
        }
      }
    },
    "オンボーディング" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tutorial"
          }
        }
      }
    },
    "キャンセル" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        }
      }
    },
    "このサービスはxxxです" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This service is xxx"
          }
        }
      }
    },
    "サービスを開始します" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start service"
          }
        }
      }
    },
    "ショートカット" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Shortcut"
          }
        }
      }
    },
    "タスク" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tasks"
          }
        }
      }
    },
    "タスク一覧" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Task List"
          }
        }
      }
    },
    "チュートリアル" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tutorial"
          }
        }
      }
    },
    "デザイン システム" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Design System"
          }
        }
      }
    },
    "デバイス情報" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Device Info"
          }
        }
      }
    },
    "デバッグ アクション" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Debug Action"
          }
        }
      }
    },
    "デバッグメニュー" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Debug Menu"
          }
        }
      }
    },
    "ライセンス" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Licenses"
          }
        }
      }
    },
    "ライセンスはありません" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "There are no licenses"
          }
        }
      }
    },
    "ライセンス一覧" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "License List"
          }
        }
      }
    },
    "ライセンス詳細" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "License Detail"
          }
        }
      }
    },
    "予期せぬエラー" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Unexpected Error"
          }
        }
      }
    },
    "始める" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start"
          }
        }
      }
    },
    "強制クラッシュ" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Force Crash"
          }
        }
      }
    },
    "次へ" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Next"
          }
        }
      }
    },
    "画面一覧 - %@" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "View List- %@"
          }
        }
      }
    },
    "設定" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        }
      }
    }
  },
  "version" : "1.0"
}