...
        String(localized: "長い文字列", bundle: .module)
    }
}

extension String: PlaceholderProvider {
    public static var placeholder: String {
        "abc123あいう漢字カナ"
    }
}

